--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -1,9 +1,5 @@
 FROM python:3.7-slim
-
 WORKDIR /app
-
 COPY . .
-
 RUN pip3 install -r /app/requirements.txt --no-cache-dir
-
-CMD ["gunicorn", "api_yamdb.wsgi:application", "--bind", "0:8000" ]
+CMD python manage.py runserver 0:5000 
