--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -32,8 +32,7 @@ jobs:
         cd api_yamdb
         # запустить написанные разработчиком тесты
         python manage.py test
-
-build_and_push_to_docker_hub:
+  build:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
@@ -55,4 +54,21 @@ build_and_push_to_docker_hub:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          tags: strashnovavictoria/yamdb_workflow:latest 
+          tags: strashnovavictoria/yamdb_workflow:latest
+  # Деплой приложения на удалённый сервер
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
+    - name: executing remote ssh commands to deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.SSH_KEY }}
+        script: |
+          # Выполняет pull образа с DockerHub
+          sudo docker pull strashnovavictoria/yamdb_workflow
+          #остановка всех контейнеров
+          sudo docker stop $(sudo docker ps -a -q)
+          sudo docker run --rm -d -p 5000:5000 strashnovavictoria/yamdb_workflow 
