--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -1,5 +1,7 @@
-FROM python:3.7-slim
-WORKDIR /app
-COPY . .
-RUN pip3 install -r /app/requirements.txt --no-cache-dir
-CMD ["python3", "manage.py", "runserver", "0:8000"] 
+FROM python:3.7-slim 
+RUN mkdir /app 
+COPY requirements.txt /app 
+RUN pip3 install -r /app/requirements.txt --no-cache-dir 
+COPY . /app 
+WORKDIR /app 
+CMD python manage.py runserver 0:5000
