--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -1,7 +1,5 @@
 FROM python:3.7-slim 
-RUN mkdir /app 
-COPY requirements.txt /app 
-RUN pip3 install -r /app/requirements.txt --no-cache-dir 
+WORKDIR /app
 COPY . /app 
-WORKDIR /app 
-CMD python manage.py runserver 0:5000
+RUN pip3 install -r requirements.txt --no-cache-dir  
+CMD ["gunicorn", "api_yamdb.wsgi:application", "--bind", "0:8000" ]
