--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -1,5 +1,9 @@
-FROM python:3.7-slim 
+FROM python:3.7-slim
+
 WORKDIR /app
-COPY . /app 
-RUN pip3 install -r requirements.txt --no-cache-dir  
+
+COPY . .
+
+RUN pip3 install -r requirements.txt --no-cache-dir
+
 CMD ["gunicorn", "api_yamdb.wsgi:application", "--bind", "0:8000" ]
