--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -53,7 +53,8 @@ jobs:
         # Пуш образа в Docker Hub 
         uses: docker/build-push-action@v2 
         with:
-          file: ../api_yamdb/Dockerfile
+          context: api_yamdb
+          file: api_yamdb/Dockerfile
           push: true
           tags: strashnovavictoria/yamdb_workflow:latest
   # Деплой приложения на удалённый сервер
