--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
       - ./.env
 
   web:
-    build: ../api_yamdb/
+    build: strashnovavictoria/yamdb_workflow:latest
     restart: always
     volumes:
       - static_value:/app/static/
