--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 51.250.100.223 tavria.ddns.net;
+    server_name 51.250.100.223;
     location /static/ {
         root /var/html/;
     }
