--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -61,8 +61,8 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            sudo docker-compose stop
-            sudo docker-compose rm web
+            sudo docker compose stop
+            sudo docker compose rm web
             sudo systemctl stop nginx
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
