--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -1,3 +1,4 @@
+
 version: '3.8'
 
 services:
@@ -27,6 +28,9 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - static_value:/var/html/static/
       - media_value:/var/html/media/
+      - .static/redoc.yaml:/var/html/redoc/redoc.yaml
+      - .templates/redoc.html:/var/html/redoc/redoc.html
+
     depends_on:
       - web
 
