--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -11,6 +11,6 @@ server {
         root /var/html;
     }
     location / {
-        proxy_pass http://web:8000;
+        proxy_pass http://51.250.100.223:8000;
     }
 }
