--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 51.250.100.223;
+    server_name 127.0.0.1;
     location /static/ {
         root /var/html/;
     }
@@ -11,6 +11,6 @@ server {
         root /var/html;
     }
     location / {
-        proxy_pass http://51.250.100.223:8000;
+        proxy_pass http://web:8000;
     }
 }
